# nylas-perftools

./: .gitignore  README.md  py2devtools.py  pyproject.toml  setup.py  stacksampler.py  yeet.py  yote.py
stackcollector/: cli.py  collector.py  settings.py  visualizer.py
tests/: test_sampler.py
