[tool.poetry]
name = "nylas-perftools"
version = "0.0.0"
description = ""
authors = ["NostraDavid <55331731+nostradavid@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.2.2"
nylas-production-python = "^0.4.3"
click = "^8.1.3"
dateparser = "^1.1.1"
gevent = "^21.12.0"
Werkzeug = "^2.2.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
